k3s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metric2deploy
spec:
  selector:
    app: metric2deploy
  ports:
    - port: 80
      targetPort: 80
